--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,19 @@
-<mat-slider min="1" max="100" step="1" value="50"></mat-slider>
+<div class="container">
+    <div class="yotei-field">
+        <div>
+            <p>東京国立博物館</p>
+        </div>
+        <div>
+            <p>仏像や刀がすごい</p>
+        </div>
+        <div>
+            <p>東京</p>
+        </div>
+        <div>
+            <p>上野駅徒歩10分</p>
+        </div>
+    </div>
+    <div class="button-row">
+        <button mat-raised-button color="primary">ランダム</button>
+    </div>
+</div>
