ランダムに配列を並び替える

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <div class="yotei-field">
         <div>
             <p>{{ yotei.name }}</p>
@@ -16,4 +16,5 @@
     <div class="button-row">
         <button mat-raised-button color="primary" (click)="feachKamoto()">ランダム</button>
     </div>
-</div>
+</div> -->
+<app-swiper [yotei]="yotei"></app-swiper>
