--- a/src/app/component/swiper/swiper.component.css
+++ b/src/app/component/swiper/swiper.component.css
@@ -6,3 +6,23 @@
 .yotei-swiper {
     height: 380px;
 }
+
+.y-container {
+    padding: 15px;
+}
+
+.border {
+    border: 1px solid #4A4A4A;
+}
+
+.name {
+    width: 100%;
+    height: 80px;
+}
+
+.name p {
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 80px;
+}
