--- a/src/app/component/swiper/swiper.component.html
+++ b/src/app/component/swiper/swiper.component.html
@@ -1,21 +1,24 @@
 <div>
   <div class="dummy-area"></div>
   <swiper
-    #swiperVirtualRef
     [slidesPerView]="1.25"
     [spaceBetween]="15"
     [pagination]="{ type: 'fraction' }"
-    [virtual]="true"
-    slideActiveClass="swiper-active"
     [centeredSlides]="true"
     [navigation]="true"
     class="yotei-swiper"
     id="yotei"
   >
-    <ng-template swiperSlide
-      *ngFor="let slide of virtualSlides;"
-    >
-    {{ slide }}
+    <ng-template swiperSlide *ngFor="let y of yotei;">
+      <div class="y-container">
+        <mat-chip>{{ y.category }}</mat-chip>
+        <div class="name">
+          <p>{{ y.name }}</p>
+        </div>
+        <div class="border"></div>
+        <div class="message">{{ y.message }}</div>
+        <div class="prefecture">{{ y.prefecture }}</div>
+      </div>
     </ng-template>
   </swiper>
 </div>
