pick-buttonの作成とswiperの配置先変更

--- a/src/app/component/parts/swiper/swiper.component.html
+++ b/src/app/component/parts/swiper/swiper.component.html
@@ -19,6 +19,7 @@
         <div class="message">{{ y.message }}</div>
         <div class="prefecture">{{ y.prefecture }}</div>
       </div>
+      <app-pick-button></app-pick-button>
     </ng-template>
   </swiper>
 </div>
